# 4399-9922_Chatterbox_Voice_Lab

./: Makefile  README.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.gpu  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/api/: audio.py  generate.py  voices.py
backend/app/: config.py  dependencies.py
backend/app/api/: jobs.py  presets.py  projects.py  router.py  ws.py
backend/app/core/: database.py  events.py  exceptions.py  storage.py
backend/app/models/: __init__.py  base.py  generation.py  preset.py
backend/app/schemas/: generation.py  preset.py  project.py  voice.py
backend/app/services/: generation_service.py  text_chunker.py
backend/app/utils/: paralinguistic.py
backend/models/: job.py  project.py  timeline_clip.py  voice_profile.py
backend/schemas/: audio.py  job.py  ws.py
backend/services/: audio_processor.py  engine_manager.py  job_queue.py  project_service.py  voice_service.py
backend/tests/: test_config_database_url.py  test_paralinguistic.py
backend/utils/: audio_utils.py
frontend/: Dockerfile  index.html  nginx-frontend.conf  package.json  vite.config.ts
frontend/src/: App.tsx  globals.css
frontend/src/hooks/: use-audio-player.ts  use-debounced-param.ts  use-generation.ts  use-voice-upload.ts  use-websocket.ts
frontend/src/lib/: api.ts  constants.ts  utils.ts  ws.ts
frontend/src/stores/: editor-store.ts  generation-store.ts  player-store.ts  (+5 more)
nginx/: default.conf
scripts/: download-models.sh  health-check.sh  init-db.sh
(+30 files in other folders)
